# cmocka

./: .clang-format  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CPackConfig.cmake  ChangeLog  CompilerChecks.cmake  ConfigureChecks.cmake  INSTALL.md  README.md  cmocka-config.cmake.in  cmocka.pc.cmake  meson.build  sbom.cdx.json
cmake/Modules/: AddCMockaTest.cmake  DefineCompilerFlags.cmake
coverity/: Makefile  coverity-builtins.h  coverity_assert_model.c
cppcheck/: README.md  cmocka.cfg
doc/: CMakeLists.txt  doxygen-custom.css  mainpage.dox
example/: CMakeLists.txt  allocate_module_test.c  assert_macro.c  assert_macro.h  assert_macro_test.c  assert_module.c  assert_module.h  assert_module_test.c  calculator.c  calculator_test.c  expect_check_data_advanced.c  expect_check_data_example.c  named_returns.c  output_override_test.c  set_errno.c  set_parameters.c  simple_test.c
example/mock/chef_wrap/: chef.c  waiter_test_wrap.c
example/mock/uptime/: CMakeLists.txt  test_uptime.c  uptime.c
include/: cmocka.h  cmocka_private.h  cmocka_version.h.cmake
src/: CMakeLists.txt  cmocka.c  cmocka.def
tests/: CMakeLists.txt  meson.build  test_alloc.c  test_assert_double_float.c  test_assert_double_float_fail.c  test_assert_false.c  test_assert_false_fail.c  test_assert_funcptr.c  test_assert_macros.c  test_assert_macros_fail.c  test_assert_memory.c  test_assert_memory_fail.c  test_assert_ptr.c  test_assert_ptr_fail.c  test_assert_ptr_msg.c  test_assert_ptr_msg_fail.c  test_assert_range.c  test_assert_range_fail.c  test_assert_set.c  test_assert_set_fail.c  test_assert_true.c  test_assert_true_fail.c  test_assert_u_int.c  test_assert_u_int_fail.c  test_basics.c  test_buffer.c  test_double_macros.c  test_exception_handler.c  test_expect_check.c  test_expect_check_fail.c  test_expect_check_new_api.c  test_expect_check_new_api_fail.c  test_expect_check_old_api.c  test_expect_check_old_api_fail.c  test_expect_in_range.c  test_expect_u_int_in_set.c  test_expect_u_int_not_in_set.c  test_expect_value.c  test_fixtures.c  test_float_macros.c  (+28 more)
